# distributed-cloud-storage

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cluster_config.csv  frontend_servers.txt  run_docker.sh  run_docker_local.sh
client/: CMakeLists.txt
client/src/: kv_client.cpp  kv_client.h
frontend/: CMakeLists.txt  accounts_webmail.cc  accounts_webmail.h  admin_console.cc  admin_console.h  frontend_node_registration.cc  frontend_node_registration.h  http_server.cc  load_balancer.cc  smtp_client.cc  smtp_client.h  smtp_server.cc  smtp_server.h  storage.cc  storage.h  utils.cc  utils.h
pages/: 404.html  admin.html  compose.html  drive.html  inbox.html  login.html  move_page.html  register.html  rename_page.html  reset_password.html  view_email.html
proto/: CMakeLists.txt
proto/myproto/: coordinator.proto  kvstorage.proto
server/: CMakeLists.txt
server/src/: checkpoint.cpp  checkpoint.h  coordinator_server.cpp  kv_server.cpp  recovery.cpp  router_server.cpp  tablet.h  tablet_test.cpp  wal.cpp  wal.h
